--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
   "author": "Abhishek Patwardhan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "mongoose": "^6.1.10"
   },
   "devDependencies": {
